# browser_agent

./: .gitignore  LICENSE  README.md  claude_config_example.json  pyproject.toml
hybrid_browser_mcp/: __init__.py  config.py  router.py  server.py
tests/: test_router.py
